temporal-adventure-bot/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-chatbot.leenet.link
spec:
  hosts:
  - "chatbot.leenet.link"
  gateways:
  - neon-ingress/leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: temporal-adventure-bot.leenet.svc.cluster.local
          port:
            number: 3001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-discord.leenet.link
spec:
  hosts:
  - "discord.leenet.link"
  gateways:
  - neon-ingress/leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: temporal-discord-adventure-bot.leenet.svc.cluster.local
          port:
            number: 3002
